--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,23 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: 5
   timeout: 5000
+  username: postgres
+  password: bulleT123
 
 development:
+  database: my_database_development
   <<: *default
-  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
+  database: my_database_test
   <<: *default
-  database: db/test.sqlite3
 
 production:
+  database: my_database_production
   <<: *default
-  database: db/production.sqlite3
