--- a/shared/config/nginx.conf
+++ b/shared/config/nginx.conf
@@ -1,26 +1,23 @@
-tream unicorn {
-    server unix:/home/demo/application/shared/run/unicorn.sock fail_timeout=0; 
+upstream unicorn {
+    server unix:/home/deploy/application/shared/run/unicorn.sock fail_timeout=0;
 }
- 
-server { 
-    listen 80 default; 
-    root /home/deployer/goodmeet/current/public;
+
+server {
+    listen 80 default;
+    root /home/deploy/application/current/public;
     try_files $uri/index.html $uri.html $uri @app;
-    location ^~ /assets/ { 
+    location ^~ /assets/ {
         expires max;
         add_header Cache-Control public;
     }
     location @app {
         proxy_pass http://unicorn;
-        proxy_http_version 1.1;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_redirect off;
-        proxy_buffering off;
-        chunked_transfer_encoding on;
     }
     error_page 500 502 503 504 /500.html;
     location = /500.html {
-        root /home/deployer/goodmeet/current/public;
+        root /home/deploy/application/current/public;
     }
 }
